Tutorial-Start_to_Finish-Curvilinear_BCs-new: most of the C code is now in place

--- a/Tutorial-Start_to_Finish-Curvilinear_BCs-new.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs-new.ipynb
@@ -133,7 +133,7 @@
     "1. [Step 2](#ccode_bc_struct): `bc_struct` and other C data structures used for storing boundary condition information\n",
     "1. [Step 3](#set_up__bc_gz_map_and_parity_condns): `set_up__bc_gz_map_and_parity_condns()`: C function for distinguishing inner from outer boundary points, and setting parity conditions\n",
     "1. [Step 4](#set_bc_struct): `set_bcstruct()`: Using information from `set_up__bc_gz_map_and_parity_condns()` as input, set `bc_struct`\n",
-    "1. [Step 5](#apply_bcs_curvilinear): `apply_bcs_curvilinear()` C function that quickly applies boundary and parity conditions with information from `bc_struct`\n",
+    "1. [Step 5](#apply_bcs_curvilinear): `apply_bcs_curvilinear()` C function: quickly apply boundary and parity conditions with information from `bcstruct`\n",
     "1. [Step 6](#start2finish): Start-to-finish C code example\n",
     "    1. [Step 6.a](#initializenrpy): Set core NRPy+ parameters for numerical grids and reference metric\n",
     "    1. [Step 6.b](#register_gfs): Register gridfunctions of all 10 parity types in NRPy+; output gridfunction aliases to `CurviBoundaryConditions/gridfunction\\_defines.h`\n",
@@ -422,7 +422,18 @@
     "# Step 4: `set_bcstruct()`: Using information from `set_up__bc_gz_map_and_parity_condns()` as input, set `bc_struct` \\[Back to [top](#toc)\\]\n",
     "$$\\label{set_bc_struct}$$\n",
     "\n",
-    "As described above, `set_up__bc_gz_map_and_parity_condns()` sets `gz_map *bc_gz_map` and `parity_condition *bc_parity_conditions` at *all* grid points. While this information could be used directly to apply boundary conditions, it is more efficient (both in memory and CPU time) to instead store only the needed information to the `bcstruct` array, so that when applying boundary conditions, we can simply loop over `bcstruct`."
+    "As described above, `set_up__bc_gz_map_and_parity_condns()` sets `gz_map *bc_gz_map` and `parity_condition *bc_parity_conditions` at *all* grid points. While this information could be used directly to apply boundary conditions, it is more efficient (both in memory and CPU time) to instead store only the needed information to the `bcstruct` array, so that when applying boundary conditions, we can simply loop over `bcstruct`.\n",
+    "\n",
+    "The algorithm follows the `bc_struct` data type defined above in [Step 2](#bc_struct), and loops over all boundary ghost zones, from the innermost layer (`which_gz=0`) outward (to `which_gz=NGHOSTS-1`). This is necessary, as, for example, some ghost zone points on the `which_gz=1` layer depend on ghost zones being set on the `which_gz=0` layer. \n",
+    "\n",
+    "1. Count the number of outer and inner boundary points, store to `num_ob_pts` and `num_ib_pts`, respectively.\n",
+    "1. Now that we know the number of outer boundary points on this ghostzone layer, allocate memory needed for storing the outer and inner boundary condition data.\n",
+    "    1. First allocate memory for outer and inner boundary ghost zones destination points to `outer_bc_dest_pt` and `inner_bc_dest_pt`, respectively.\n",
+    "    1. At all outer boundary ghost zones, allocate memory for recording on which face the ghost zone is situated.\n",
+    "    1. At all inner boundary ghost zones, allocate memory for recording the interior gridpoint to which the ghost zone maps, and the parity conditions for all 10 gridfunction types.\n",
+    "1. Store the number of outer and inner boundary points on each ghostzone layer, where e.g.,`which_gz==0` corresponds to the innermost ghostzones on the numerical domain.\n",
+    "1. Store information needed for outer boundary conditions, to `outer_bc_dest_pt[which_gz][]` and `outer_bc_face[which_gz][]` arrays.\n",
+    "1. Store information needed for inner boundary conditions, including interior point to which inner ghost zone maps, and parity conditions for all 10 gridfunction types."
    ]
   },
   {
@@ -445,19 +456,41 @@
     "//      ghostzones on the cube (\"which_gz==0\", \n",
     "//      corresponding to the single layer of ghostzones\n",
     "//      closest to the interior data), and at each \n",
-    "//      ghostzone layer, we apply the following 4-step \n",
+    "//      ghostzone layer, we apply the following 5-step \n",
     "//      algorithm:\n",
     "// Step 1: Count the number of outer and inner\n",
     "//         boundary points, store to \n",
     "//         num_ob_pts and num_ib_pts, respectively.\n",
-    "// Step 2: Allocate memory used to store needed \n",
-    "//         information for applying boundary \n",
-    "//         conditions.\n",
-    "// Step 3: Store needed information for outer boundary\n",
-    "//         conditions.\n",
-    "// Step 4: Store needed information for inner boundary\n",
-    "//         conditions.\n",
-    "void set_bcstruct(const paramstruct *restrict params,gz_map *restrict bc_gz_map, bc_struct *restrict bcstruct) {\n",
+    "// Step 2: Now that we know the number of outer \n",
+    "//         boundary points on this ghostzone layer, \n",
+    "//         allocate memory needed for storing the \n",
+    "//         outer and inner boundary condition data.\n",
+    "// Step 2.a: First allocate memory for outer and inner \n",
+    "//           boundary ghost zones destination points \n",
+    "//           to outer_bc_dest_pt and inner_bc_dest_pt,\n",
+    "//           respectively.\n",
+    "// Step 2.b: At all outer boundary ghost zones, allocate \n",
+    "//           memory for recording on which face the ghost\n",
+    "//           zone is situated.\n",
+    "// Step 2.c: At all inner boundary ghost zones, allocate \n",
+    "//           memory for recording the interior gridpoint\n",
+    "//           to which the ghost zone maps, and parity\n",
+    "//           conditions for all 10 gridfunction types.\n",
+    "// Step 3: Store the number of outer and inner boundary \n",
+    "//         points on each ghostzone layer, where e.g.,\n",
+    "//         which_gz==0 corresponds to the innermost \n",
+    "//         ghostzones on the numerical domain.\n",
+    "// Step 4: Store information needed for outer boundary \n",
+    "//         conditions, to outer_bc_dest_pt[which_gz][] \n",
+    "//         and outer_bc_face[which_gz][] arrays.\n",
+    "// Step 5: Store information needed for inner boundary\n",
+    "//         conditions, including interior point to which\n",
+    "//         inner ghost zone maps, and parity conditions\n",
+    "//         for all 10 gridfunction types.\n",
+    "void set_bcstruct(const paramstruct *restrict params,\n",
+    "                  gz_map *restrict bc_gz_map, \n",
+    "                  parity_condition *bc_parity_conditions\n",
+    "                  bc_struct *restrict bcstruct) {\n",
     "#include \"set_Cparameters.h\"\n",
     "    int imin[3] = { NGHOSTS, NGHOSTS, NGHOSTS };\n",
     "    int imax[3] = { Nxx_plus_2NGHOSTS0-NGHOSTS, Nxx_plus_2NGHOSTS1-NGHOSTS, Nxx_plus_2NGHOSTS2-NGHOSTS };\n",
@@ -484,30 +517,28 @@
     "        //    layer, we allocate memory needed for storing the outer and inner boundary\n",
     "        //     condition data.\n",
     "\n",
-    "        // Step 2.a: First store the destination points for outer and inner boundary \n",
-    "        //      conditions.\n",
+    "        // Step 2.a: First allocate memory for outer and inner boundary ghost zones destination points \n",
+    "        //           to outer_bc_dest_pt and inner_bc_dest_pt, respectively.\n",
     "        bcstruct->outer_bc_dest_pt[which_gz] = (gz_map *)malloc(sizeof(gz_map)*num_ob_pts);\n",
     "        bcstruct->inner_bc_dest_pt[which_gz] = (gz_map *)malloc(sizeof(gz_map)*num_ib_pts);\n",
     "\n",
-    "        // Step 2.b.i: The outer boundary condition needs information regarding on which \n",
-    "        //      face the boundary is situated.\n",
+    "        // Step 2.b: At all outer boundary ghost zones, allocate memory on which face the ghost zone is situated.\n",
     "        bcstruct->outer_bc_face  [which_gz] = (grid_face *)malloc(sizeof(grid_face)*num_ob_pts);\n",
-    "        // Step 2.b.ii: Meanwhile, the inner boundary condition needs to know the interior \n",
-    "        //      gridpoint to which the boundary gridpoint maps, and the parity (always == 1\n",
-    "        //      in the case of scalar fields).\n",
+    "\n",
+    "        // Step 2.c: At all inner boundary ghost zones, allocate memory for recording the interior gridpoint\n",
+    "        //           to which the ghost zone maps, and parity conditions for all 10 gridfunction types.\n",
     "        bcstruct->inner_bc_src_pt[which_gz] = (gz_map *)malloc(sizeof(gz_map)*num_ib_pts);\n",
     "        bcstruct->inner_bc_parity[which_gz] = (parity *)malloc(sizeof(parity)*num_ib_pts);\n",
     "\n",
-    "        // Step 2.c: Store the number of outer and inner boundary points on each ghostzone,\n",
-    "        //      where which_gz==0 corresponds to the innermost ghostzones on the grid cube.\n",
+    "        // Step 3: Store the number of outer and inner boundary points on each ghostzone layer, where e.g.,\n",
+    "        //         which_gz==0 corresponds to the innermost ghostzones on the numerical domain.\n",
     "        bcstruct->num_ob_gz_pts[which_gz] = num_ob_pts;\n",
     "        bcstruct->num_ib_gz_pts[which_gz] = num_ib_pts;\n",
     "\n",
     "        // Reset imin[] and imax[], to prepare for the next step.\n",
     "        for(int ii=0;ii<3;ii++) {imin[ii]++; imax[ii]--;}\n",
     "\n",
-    "        // Step 3: Store needed information for outer boundary\n",
-    "        //         conditions, to outer_bc_dest_pt[which_gz][] \n",
+    "        // Step 4: Store information needed for outer boundary conditions, to outer_bc_dest_pt[which_gz][] \n",
     "        //         and outer_bc_face[which_gz][] arrays:\n",
     "#define OB_SET(facei0,facei1,facei2) if(bc_gz_map[IDX3S(i0,i1,i2)].i0==-1) {  \\\n",
     "    bcstruct->outer_bc_dest_pt[which_gz][pt].i0 = i0;     \\\n",
@@ -530,8 +561,8 @@
     "        // Reset imin[] and imax[], to prepare for the next step.\n",
     "        for(int ii=0;ii<3;ii++) {imin[ii]++; imax[ii]--;}\n",
     "\n",
-    "        // Step 4: Store needed information for inner boundary\n",
-    "        //         conditions.\n",
+    "        // Step 5: Store information needed for inner boundary conditions, including interior point to which\n",
+    "        //         inner ghost zone maps, and parity conditions for all 10 gridfunction types.\n",
     "#define IB_SET if(bc_gz_map[IDX3S(i0,i1,i2)].i0!=-1) { \\\n",
     "    bcstruct->inner_bc_dest_pt[which_gz][pt].i0=i0; \\\n",
     "    bcstruct->inner_bc_dest_pt[which_gz][pt].i1=i1; \\\n",
@@ -539,6 +570,8 @@
     "    bcstruct->inner_bc_src_pt[which_gz][pt].i0=bc_gz_map[IDX3S(i0,i1,i2)].i0; \\\n",
     "    bcstruct->inner_bc_src_pt[which_gz][pt].i1=bc_gz_map[IDX3S(i0,i1,i2)].i1; \\\n",
     "    bcstruct->inner_bc_src_pt[which_gz][pt].i2=bc_gz_map[IDX3S(i0,i1,i2)].i2; \\\n",
+    "    for(int ii=0;ii<10;ii++) { \\\n",
+    "      bcstruct->inner_bc_src_pt[which_gz][pt].parity[ii] = bc_parity_conditions[IDX3S(i0,i1,i2)].parity[ii]; } \\\n",
     "    pt++; }\n",
     "\n",
     "        pt = 0;\n",
@@ -559,8 +592,10 @@
    "source": [
     "<a id='apply_bcs_curvilinear'></a>\n",
     "\n",
-    "# Step 5: `apply_bcs_curvilinear()` C function that quickly applies boundary and parity conditions with information from `bc_struct` \\[Back to [top](#toc)\\]\n",
-    "$$\\label{apply_bcs_curvilinear}$$"
+    "# Step 5: `apply_bcs_curvilinear()` C function: quickly apply boundary and parity conditions with information from `bcstruct` \\[Back to [top](#toc)\\]\n",
+    "$$\\label{apply_bcs_curvilinear}$$\n",
+    "\n",
+    "`apply_bcs_curvilinear()` loops over all `NUM_EVOL_GF` \"evolved\" gridfunctions and, using a `bcstruct` filled in by the `set_bcstruct()` function above, applies boundary conditions to each ghost zone layer, starting with the innermost layer and working outward. "
    ]
   },
   {
@@ -585,8 +620,8 @@
     "    }\n",
     "\n",
     "// Curvilinear boundary condition driver routine: Apply BCs to all six\n",
-    "//          boundary faces of the cube, filling in the innermost\n",
-    "//          ghost zone first, and moving outward.\n",
+    "//          boundary faces of the 3D numerical domain, filling in the \n",
+    "//          innermost ghost zone layer first, and moving outward.\n",
     "void apply_bcs_curvilinear(const paramstruct *restrict params, const bc_struct *restrict bcstruct, REAL *restrict gfs) {\n",
     "#pragma omp parallel for\n",
     "    for(int which_gf=0;which_gf<NUM_EVOL_GFS;which_gf++) {\n",
@@ -620,6 +655,68 @@
     "        } // END for(int which_gz = 0; which_gz < NGHOSTS; which_gz++)\n",
     "    } // END for(int which_gf=0;which_gf<NUM_EVOL_GFS;which_gf++)\n",
     "} // END function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile CurviBoundaryConditions/BC_main_driver.h\n",
+    "\n",
+    "// Step 1: Allocate memory storage for bc_gz_map, which\n",
+    "//         in the case a boundary point is a *parity*\n",
+    "//         boundary, is set to the interior, non-\n",
+    "//         boundary point corresponding to the same\n",
+    "//         Cartesian gridpoint. Otherwise bc_gz_map\n",
+    "//         is set to (i0,i1,i2) = (-1,-1,-1).\n",
+    "gz_map *bc_gz_map = (gz_map *)malloc(sizeof(gz_map)*Nxx_plus_2NGHOSTS_tot);\n",
+    "\n",
+    "// Step 2: Allocate memory storage for bc_parity_conditions,\n",
+    "//         which store parity conditions for all 10 \n",
+    "//         gridfunction types at all grid points.\n",
+    "parity_condition *bc_parity_conditions = (parity_condition *)malloc(sizeof(parity_condition)*Nxx_plus_2NGHOSTS_tot);\n",
+    "\n",
+    "// Step 3: Set bc_gz_map and bc_parity_conditions at *all*\n",
+    "//         points; on the boundary and otherwise.\n",
+    "set_up__bc_gz_map_and_parity_condns(&params, xx, xxmin, xxmax, bc_gz_map,\n",
+    "                                    bc_parity_conditions\n",
+    "                                   );\n",
+    "\n",
+    "// Step 4: Declare and allocate memory for bcstruct,\n",
+    "//         which will store all information needed for\n",
+    "//         applying the boundary conditions.\n",
+    "bc_struct bcstruct;\n",
+    "bcstruct.outer_bc_dest_pt = (gz_map **)malloc(sizeof(gz_map *)*NGHOSTS);\n",
+    "bcstruct.outer_bc_face    = (grid_face **)malloc(sizeof(grid_face *)*NGHOSTS);\n",
+    "bcstruct.inner_bc_dest_pt = (gz_map **)malloc(sizeof(gz_map *)*NGHOSTS);\n",
+    "bcstruct.inner_bc_src_pt  = (gz_map **)malloc(sizeof(gz_map *)*NGHOSTS);\n",
+    "bcstruct.inner_bc_parity  = (parity **)malloc(sizeof(parity *)*NGHOSTS);\n",
+    "bcstruct.num_ob_gz_pts    = (    int *)malloc(sizeof(int)*NGHOSTS);\n",
+    "bcstruct.num_ib_gz_pts    = (    int *)malloc(sizeof(int)*NGHOSTS);\n",
+    "\n",
+    "// Step 4: Store all information needed to quickly and\n",
+    "//         efficiently apply boundary conditions. This\n",
+    "//         function transfers all information from \n",
+    "//         bc_gz_map (defined at *all gridpoints*) into \n",
+    "//         bcstruct (defined only at boundary points).\n",
+    "//         Thus when this function has finished, \n",
+    "//         bc_gz_map is no longer needed.\n",
+    "set_bcstruct(&params,bc_gz_map,\n",
+    "             bc_parity_conditions,\n",
+    "             &bcstruct);\n",
+    "\n",
+    "// Step 5: As described in Step 4, bc_gz_map is no \n",
+    "//         longer needed at this point, so we free its\n",
+    "//         memory. Farewell, friend!\n",
+    "free(bc_gz_map);\n",
+    "free(bc_parity_conditions);"
    ]
   },
   {
