Finished first draft of documentation, started applying current formatting to files.

--- a/Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.ipynb
+++ b/Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.ipynb
@@ -6,7 +6,12 @@
    "source": [
     "# `GiRaFFE_HO` C code library: Conservative-to-Primitive and Primitive-to-Conservative Solvers\n",
     "\n",
-    "### Author: Patrick Nelson\n",
+    "## Author: Patrick Nelson\n",
+    "\n",
+    "<a id='intro'></a>\n",
+    "\n",
+    "## Introduction\n",
+    "$$\\label{intro}$$\n",
     "\n",
     "This writes and documents the C code that `GiRaFFE_HO` uses in order to update the Valencia 3-velocity at each timestep. It also computes corrections the the densitized Poynting flux in order to keep the physical quantities from violating the GRFFE constraints. \n",
     "\n",
@@ -17,6 +22,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc'></a>\n",
+    "\n",
+    "# Table of Contents\n",
+    "$$\\label{toc}$$\n",
+    "\n",
+    "This module is organized as follows\n",
+    "\n",
+    "1. [Step 1](#c2p): The conservative-to-primitive solver\n",
+    "    1. [Step 1.a](#ortho_S_B): Enforce the orthogonality of $\\tilde{S}_i$ and $B^i$\n",
+    "    1. [Step 1.b](#vel_cap): Rescale ${\\tilde S}_i$ to limit the Lorentz factor and enforce the velocity cap\n",
+    "    1. [Step 1.c](#update_vel): Recompute the velocities at the new timestep\n",
+    "    1. [Step 1.d](#current_sheet): Enforce the Current Sheet prescription\n",
+    "1. [Step 2](#p2c): The primitive-to-conservative solver"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='c2p'></a>\n",
+    "\n",
+    "# Step 1: The conservative-to-primitive solver\n",
+    "\\[Back to [top](#toc)\\]\n",
+    "$$\\label{c2p}$$\n",
+    "\n",
     "We start with the Conservative-to-Primitive solver. This function is called after the vector potential and Poynting vector have been evolved at a timestep and updates the velocities. The algorithm will be as follows: \n",
     "\n",
     "1. Enforce the orthogonality of ${\\tilde S}_i$ and $B^i$\n",
@@ -264,6 +294,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='ortho_S_B'></a>\n",
+    "\n",
+    "## Step 1.a: Enforce the orthogonality of $\\tilde{S}_i$ and $B^i$\n",
+    "\\[Back to [top](#toc)\\]\n",
+    "$$\\label{ortho_S_B}$$\n",
+    "\n",
     "Now, we will enforce the orthogonality of the magnetic field and densitized poynting flux: \n",
     "$${\\tilde S}_i \\rightarrow {\\tilde S}_i - ({\\tilde S}_j {\\tilde B}^j) {\\tilde B}_i/{\\tilde B}^2$$\n",
     "First, we compute the inner products ${\\tilde S}_j {\\tilde B}^j$ and ${\\tilde B}^2 = \\gamma_{ij} {\\tilde B}^i {\\tilde B}^j$; then, we subtract $({\\tilde S}_j {\\tilde B}^j) {\\tilde B}_i/{\\tilde B}^2$ from ${\\tilde S}_i$. We thus guarantee that ${\\tilde S}_i B^i=0$.\n",
@@ -322,6 +358,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='vel_cap'></a>\n",
+    "\n",
+    "## Step 1.b: Rescale ${\\tilde S}_i$ to limit the Lorentz factor and enforce the velocity cap\n",
+    "\\[Back to [top](#toc)\\]\n",
+    "$$\\label{vel_cap}$$\n",
+    "\n",
     "The next fix that we will apply limits the Lorentz factor. That is, we define the factor $f$ as \n",
     "$$f = \\sqrt{(1-\\gamma_{\\rm max}^{-2}){\\tilde B}^4/(16 \\pi^2 \\gamma {\\tilde S}^2)}.$$\n",
     "\n",
@@ -385,6 +427,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='update_vel'></a>\n",
+    "\n",
+    "## Step 1.c: Recompute the velocities at the new timestep\n",
+    "\\[Back to [top](#toc)\\]\n",
+    "$$\\label{update_vel}$$\n",
+    "\n",
     "Finally, we can calculate the velocities. In the source used, the equation to compute the drift velocity is given as \n",
     "$$v^i = 4 \\pi \\alpha \\gamma^{ij} {\\tilde S}_j \\gamma^{-1/2} B^{-2} - \\beta^i.$$\n",
     "However, we wish to use the Valencia velocity instead. Since the Valencia velocity $\\bar{v}^i = \\frac{1}{\\alpha} \\left( v^i - \\beta^i \\right)$, we will code \n",
@@ -429,7 +477,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<a id='current_sheet'></a>\n",
+    "\n",
+    "## Step 1.d: Enforce the Current Sheet prescription\n",
+    "\\[Back to [top](#toc)\\]\n",
+    "$$\\label{current_sheet}$$\n",
+    "\n",
+    "Now, we seek to handle any current sheets (a physically important phenomenon) that might form. This algorithm will preserve an current sheets that form in the xy-plane by preventing our numerical scheme from dissipating them. After fixing the z-component of the velocity, we recompute the conservative variables to be consistent with the new velocities.\n",
+    "\n",
+    "Thus, if we are within four gridpoints of $z=0$, **(Why is it 4.01?)** we set the component of the velocity perpendicular to the current sheet to zero by $n_i v^i = 0$, where $n_i = \\gamma_{ij} n^j$ is a unit normal to the current sheet and $n^j = \\delta^{jz} = (0\\ 0\\ 1)$. For drift velocity, this comes out to $$v^z = -\\frac{\\gamma_{xz} v^x + \\gamma_{yz} v^y}{\\gamma_{zz}}.$$ This reduces to $v^z = 0$ in flat space, as one would expect. **This should be checked for Valencia velocity.** The code also tracks the number of times this correction has been performed."
+   ]
   },
   {
    "cell_type": "code",
@@ -476,7 +534,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "To finish out this portion of the algorithm, we include some diagnostic code (commented out for now) that compares the velocities before and after the current sheet prescription. We also write the new values of $\\tilde{S}_i$ to memory, since they may have been changed in the first or third  of the GRFFE fixes. "
+   ]
   },
   {
    "cell_type": "code",
@@ -511,18 +571,20 @@
     "          in_gfs[IDX4pt(STILDED2GF, index)] = StildeD2L;\n",
     "        }\n",
     "      }\n",
-    "\n",
-    " /*\n",
-    "  *CCTK_VInfo(CCTK_THORNSTRING,\"FFEC2P: Lev: %d NumPts= %d | Error: %.3e, ErrDenom: %.3e, v_limits: %d / %d = %.3e, v_nulls: %d / %d = %.3e\",\n",
-    "  *           (int)GetRefinementLevel(cctkGH),\n",
-    "  *           cctk_lsh[0]*cctk_lsh[1]*cctk_lsh[2],\n",
-    "  *           error_int_numer/(error_int_denom+1e-300),error_int_denom,\n",
-    "  *                  num_vel_limits,            cctk_lsh[0]*cctk_lsh[1]*cctk_lsh[2],\n",
-    "  *           (REAL)num_vel_limits/((REAL)cctk_lsh[0]*cctk_lsh[1]*cctk_lsh[2]),\n",
-    "  *                  num_vel_nulls_current_sheet,            cctk_lsh[0]*cctk_lsh[1]*cctk_lsh[2],\n",
-    "  *           (REAL)num_vel_nulls_current_sheet/((REAL)cctk_lsh[0]*cctk_lsh[1]*cctk_lsh[2]));\n",
-    "  */\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='p2c'></a>\n",
+    "\n",
+    "# Step 2: The primitive-to-conservative solver\n",
+    "\\[Back to [top](#toc)\\]\n",
+    "$$\\label{p2c}$$\n",
+    "\n",
+    "This function is used to recompute the the conservatives $\\tilde{S}_i$ after the 3-velocity is changed as part of the current sheet prescription. It implements the same equation used to compute the initial Poynting flux from the initial velocity: $$\\tilde{S}_i = \\gamma_{ij} \\frac{v^j \\sqrt{\\gamma}B^2}{4 \\pi}$$ in terms of the Valencia 3-velocity. In the implementation here, we first calculate $B^2 = \\gamma_{ij} B^i B^j$, then $v_i = \\gamma_{ij} v^j$ before we calculate the equivalent expression $$\\tilde{S}_i = \\frac{v_j \\sqrt{\\gamma}B^2}{4 \\pi}.$$"
    ]
   },
   {
