--- a/Tutorial-cmdline_helper.ipynb
+++ b/Tutorial-cmdline_helper.ipynb
@@ -91,8 +91,9 @@
     "# Authors: Brandon Clark\n",
     "#          Zach Etienne\n",
     "#          zachetie **at** gmail **dot* com\n",
+    "#          Kevin Lituchy\n",
     "\n",
-    "import io, os, shlex, subprocess, sys, time, multiprocessing, platform, getpass"
+    "import io, os, shlex, subprocess, sys, time, multiprocessing, getpass, platform"
    ]
   },
   {
@@ -138,9 +139,9 @@
     "    cmd = \"where\" if os.name == \"nt\" else \"which\"\n",
     "    try: \n",
     "        subprocess.check_output([cmd, exec_name])\n",
-    "    except:\n",
-    "        if error_if_not_found==True: # Thanks to Kevin Lituchy for fixing a bug in this line of code.\n",
-    "            print(\"Sorry, cannot execute the command: \"+exec_name)\n",
+    "    except subprocess.CalledProcessError:\n",
+    "        if error_if_not_found:\n",
+    "            print(\"Sorry, cannot execute the command: \" + exec_name)\n",
     "            sys.exit(1)\n",
     "        else:\n",
     "            return False\n",
@@ -212,7 +213,7 @@
     "    if not os.path.isfile(main_C_output_file):\n",
     "        print(\"Sorry, compilation failed\")\n",
     "        sys.exit(1)\n",
-    "    print(\"Finished compilation.\")\n"
+    "    print(\"Finished compilation.\")"
    ]
   },
   {
@@ -255,7 +256,7 @@
     "#            if available. Calls Execute_input_string() to\n",
     "#            redirect output from stdout & stderr to desired\n",
     "#            destinations.\n",
-    "def Execute(executable, executable_output_arguments = \"\", file_to_redirect_stdout = os.devnull):\n",
+    "def Execute(executable, executable_output_arguments=\"\", file_to_redirect_stdout=os.devnull):\n",
     "    # Step 1: Delete old version of executable file\n",
     "    if file_to_redirect_stdout != os.devnull:\n",
     "        delete_existing_files(file_to_redirect_stdout)\n",
@@ -267,10 +268,11 @@
     "    if os.name == \"nt\":\n",
     "        # ... do as the Windows do\n",
     "        # https://stackoverflow.com/questions/49018413/filenotfounderror-subprocess-popendir-windows-7\n",
-    "        execute_string += \"cmd /c \"+executable.replace(\"_Playground\", \"\")\n",
-    "    \n",
-    "    taskset_exists = check_executable_exists(\"taskset\",error_if_not_found=False)\n",
-    "    if taskset_exists == True:\n",
+    "        execute_prefix = \"cmd /c \" # Run with cmd /c executable [options] on Windows\n",
+    "    else:\n",
+    "        execute_prefix = \"./\"      # Run with ./executable [options] on Linux & Mac\n",
+    "    taskset_exists = check_executable_exists(\"taskset\", error_if_not_found=False)\n",
+    "    if taskset_exists:\n",
     "        execute_string += \"taskset -c 0\"\n",
     "        if getpass.getuser() != \"jovyan\": # on mybinder, username is jovyan, and taskset -c 0 is the fastest option.\n",
     "            # If not on mybinder and taskset exists:\n",
@@ -286,8 +288,8 @@
     "                                                                  # This will happen on ARM (e.g., cellphone) CPUs \n",
     "            for i in range(N_cores_to_use-1):\n",
     "                execute_string += \",\"+str(i+1)\n",
-    "        execute_string += \" \"\n",
-    "    execute_string += os.path.join(\".\", executable)+\" \"+executable_output_arguments\n",
+    "            execute_string += \" \"\n",
+    "    execute_string += execute_prefix+executable+\" \"+executable_output_arguments\n",
     "\n",
     "    # Step 3: Execute the desired executable\n",
     "    Execute_input_string(execute_string, file_to_redirect_stdout)"
@@ -328,20 +330,30 @@
     "\n",
     "# Execute_input_string(): Executes an input string and redirects \n",
     "#            output from stdout & stderr to desired destinations.\n",
-    "def Execute_input_string(input_string, file_to_redirect_stdout):\n",
-    "    print(\"Executing `\"+input_string+\"`...\")\n",
+    "def Execute_input_string(input_string, file_to_redirect_stdout=os.devnull, output=True):\n",
+    "\n",
+    "    if output:\n",
+    "#         print('input_string: ' + repr(input_string))\n",
+    "        print(\"Executing `\"+input_string+\"`...\")\n",
     "    start = time.time()\n",
     "    # https://docs.python.org/3/library/subprocess.html\n",
-    "    args = shlex.split(input_string)\n",
+    "    if os.name != 'nt':\n",
+    "        args = shlex.split(input_string)\n",
+    "    else:\n",
+    "        args = input_string\n",
+    "\n",
+    "    # if output:\n",
+    "    #     print('args: ' + repr(args))\n",
     "    # https://stackoverflow.com/questions/18421757/live-output-from-subprocess-command\n",
     "    filename = \"tmp.txt\"\n",
     "    with io.open(filename, 'wb') as writer, io.open(filename, 'rb', 1) as reader, io.open(file_to_redirect_stdout, 'w') as rdirect:\n",
     "        process = subprocess.Popen(args, stdout=rdirect, stderr=writer)\n",
     "        while process.poll() is None:\n",
-    "            sys.stdout.write(reader.read())\n",
+    "            # https://stackoverflow.com/questions/21689365/python-3-typeerror-must-be-str-not-bytes-with-sys-stdout-write/21689447\n",
+    "            sys.stdout.write(reader.read().decode('utf-8'))\n",
     "            time.sleep(0.2)\n",
     "        # Read the remaining\n",
-    "        sys.stdout.write(reader.read())\n",
+    "        sys.stdout.write(reader.read().decode('utf-8'))\n",
     "    delete_existing_files(filename)\n",
     "# Old Python 2 version (broken for stdout redirect): if (sys.version_info < (3, 0)):\n",
     "#     else:\n",
@@ -353,7 +365,8 @@
     "#             for c in iter(lambda: process.stdout.read(1), ''):  # replace '' with b'' for Python 3<-- Doesn't work!\n",
     "#                 sys.stdout.write(f.read())\n",
     "    end = time.time()\n",
-    "    print(\"Finished executing in \"+str(end-start)+\" seconds.\")"
+    "    if output:\n",
+    "        print(\"Finished executing in \"+str(end-start)+\" seconds.\")"
    ]
   },
   {
@@ -393,10 +406,11 @@
     "def delete_existing_files(file_or_wildcard):\n",
     "    delete_string = \"\"\n",
     "    if os.name == \"nt\":\n",
-    "        delete_string += \"del \"+file_or_wildcard\n",
+    "        delete_string += \"del \" + file_or_wildcard\n",
     "    else:\n",
-    "        delete_string += \"rm -f \"+file_or_wildcard\n",
-    "    os.system(delete_string)"
+    "        delete_string += \"rm -f \" + file_or_wildcard\n",
+    "    os.system(delete_string)\n",
+    "\n"
    ]
   },
   {
@@ -463,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +485,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-cmdline_helper.ipynb to latex\n",
-      "[NbConvertApp] Writing 41987 bytes to Tutorial-cmdline_helper.tex\n",
+      "[NbConvertApp] Writing 47383 bytes to Tutorial-cmdline_helper.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
