Update all URLs to point to updated websites

--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img height=\"60px\" src=\"https://math.wvu.edu/~zetienne/SENR/images/NRPyPlusLogo.png\" align=\"center\" hspace=\"20px\" vspace=\"5px\">\n",
+    "<img height=\"60px\" src=\"http://astro.phys.wvu.edu/bhathome/images/NRPyPlusLogo.png\" align=\"center\" hspace=\"20px\" vspace=\"5px\">\n",
     "<script async src=\"https://www.googletagmanager.com/gtag/js?id=UA-59152712-8\"></script>\n",
     "<script>\n",
     "  window.dataLayer = window.dataLayer || [];\n",
@@ -16,13 +16,13 @@
     "\n",
     "## The NRPy+ Tutorial: An Introduction to Python-Based Code Generation for Numerical Relativity... and Beyond!\n",
     "\n",
-    "### Lead author: [Zachariah B. Etienne](http://math.wvu.edu/~zetienne/) $\\leftarrow$ Please feel free to email comments, revisions, or errata! \n",
+    "### Lead author: [Zachariah B. Etienne](http://astro.phys.wvu.edu/zetienne/) $\\leftarrow$ Please feel free to email comments, revisions, or errata! \n",
     "\n",
     "***If you are unfamiliar with using Jupyter Notebooks, first review the official [Jupyter Notebook Basics Guide](https://nbviewer.jupyter.org/github/jupyter/notebook/blob/master/docs/source/examples/Notebook/Notebook%20Basics.ipynb).***\n",
     "\n",
     "### PART 1: Basic Functionality of NRPy+, a First Application\n",
     "##### NRPy+ Basics\n",
-    "+ [NRPy+: Introduction & Motivation](https://math.wvu.edu/~zetienne/SENR/nrpy) (NRPy+ home page)\n",
+    "+ [NRPy+: Introduction & Motivation](http://astro.phys.wvu.edu/bhathome/nrpy.html) (NRPy+ home page)\n",
     "+ [Basic C Code Output, NRPy+'s Parameter Interface](Tutorial-Coutput__Parameter_Interface.ipynb)\n",
     "+ [`cmdline_helper`: Multi-platform command-line helper functions](Tutorial-cmdline_helper.ipynb) (*Courtesy Brandon Clark*)\n",
     "+ [Numerical Grids](Tutorial-Numerical_Grids.ipynb)\n",
