--- a/Tutorial-Start_to_Finish-Curvilinear_BCs-new.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs-new.ipynb
@@ -308,8 +308,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mkdir CurviBoundaryConditions_opt 2>/dev/null # 2>/dev/null: Don't throw an error if the directory already exists.\n",
-    "!mkdir CurviBoundaryConditions_opt/boundary_conditions 2>/dev/null # 2>/dev/null: Don't throw an error if the directory already exists."
+    "import cmdline_helper as cmd\n",
+    "outdir = \"CurviBoundaryConditions_opt_Ccodes/\"\n",
+    "cmd.mkdir(outdir)\n",
+    "cmd.mkdir(outdir+\"boundary_conditions\")"
    ]
   },
   {
@@ -321,12 +323,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting CurviBoundaryConditions_opt/boundary_conditions/BCs_data_structs.h\n"
+      "Overwriting CurviBoundaryConditions_opt_Ccodes//boundary_conditions/BCs_data_structs.h\n"
      ]
     }
    ],
    "source": [
-    "%%writefile CurviBoundaryConditions_opt/boundary_conditions/BCs_data_structs.h\n",
+    "%%writefile $outdir/boundary_conditions/BCs_data_structs.h\n",
     "\n",
     "typedef struct __ghostzone_map__ {\n",
     "  short i0,i1,i2; // i0,i1,i2 stores values from -1 (used to indicate outer boundary)\n",
@@ -617,12 +619,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting CurviBoundaryConditions_opt/boundary_conditions/set_up__bc_gz_map_and_parity_condns.h\n"
+      "Overwriting CurviBoundaryConditions_opt_Ccodes//boundary_conditions/set_up__bc_gz_map_and_parity_condns.h\n"
      ]
     }
    ],
    "source": [
-    "%%writefile CurviBoundaryConditions_opt/boundary_conditions/set_up__bc_gz_map_and_parity_condns.h\n",
+    "%%writefile $outdir/boundary_conditions/set_up__bc_gz_map_and_parity_condns.h\n",
     "\n",
     "// set_parity_conditions_from_symbolic_dot_products():\n",
     "// Evaluate dot products needed for setting parity\n",
@@ -760,12 +762,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting CurviBoundaryConditions_opt/boundary_conditions/set_bcstruct.h\n"
+      "Overwriting CurviBoundaryConditions_opt_Ccodes//boundary_conditions/set_bcstruct.h\n"
      ]
     }
    ],
    "source": [
-    "%%writefile CurviBoundaryConditions_opt/boundary_conditions/set_bcstruct.h\n",
+    "%%writefile $outdir/boundary_conditions/set_bcstruct.h\n",
     "\n",
     "// set_bcstruct() loops from the innermost boundary \n",
     "//      ghostzones on the cube (\"which_gz==0\", \n",
@@ -917,12 +919,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting CurviBoundaryConditions_opt/boundary_conditions/driver_bcstruct.h\n"
+      "Overwriting CurviBoundaryConditions_opt_Ccodes//boundary_conditions/driver_bcstruct.h\n"
      ]
     }
    ],
    "source": [
-    "%%writefile CurviBoundaryConditions_opt/boundary_conditions/driver_bcstruct.h\n",
+    "%%writefile $outdir/boundary_conditions/driver_bcstruct.h\n",
     "\n",
     "// Step 1: Allocate memory storage for bc_gz_map, which\n",
     "//         in the case a boundary point is a *parity*\n",
@@ -979,12 +981,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting CurviBoundaryConditions_opt/boundary_conditions/bcstruct_freemem.h\n"
+      "Overwriting CurviBoundaryConditions_opt_Ccodes//boundary_conditions/bcstruct_freemem.h\n"
      ]
     }
    ],
    "source": [
-    "%%writefile CurviBoundaryConditions_opt/boundary_conditions/bcstruct_freemem.h\n",
+    "%%writefile $outdir/boundary_conditions/bcstruct_freemem.h\n",
     "\n",
     "for(int i=0;i<NGHOSTS;i++) { free(bcstruct.outer[i]);  free(bcstruct.inner[i]); }\n",
     "free(bcstruct.num_ob_gz_pts); free(bcstruct.num_ib_gz_pts);"
@@ -999,12 +1001,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing CurviBoundaryConditions_opt/boundary_conditions/CurviBC_include_Cfunctions.h\n"
+      "Overwriting CurviBoundaryConditions_opt_Ccodes//boundary_conditions/CurviBC_include_Cfunctions.h\n"
      ]
     }
    ],
    "source": [
-    "%%writefile CurviBoundaryConditions_opt/boundary_conditions/CurviBC_include_Cfunctions.h\n",
+    "%%writefile $outdir/boundary_conditions/CurviBC_include_Cfunctions.h\n",
     "\n",
     "#include \"BCs_data_structs.h\"\n",
     "#include \"set_up__bc_gz_map_and_parity_condns.h\"\n",
@@ -1035,12 +1037,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting CurviBoundaryConditions_opt/boundary_conditions/apply_bcs_curvilinear.h\n"
+      "Overwriting CurviBoundaryConditions_opt_Ccodes//boundary_conditions/apply_bcs_curvilinear.h\n"
      ]
     }
    ],
    "source": [
-    "%%writefile CurviBoundaryConditions_opt/boundary_conditions/apply_bcs_curvilinear.h\n",
+    "%%writefile $outdir/boundary_conditions/apply_bcs_curvilinear.h\n",
     "\n",
     "// Declare boundary condition BC_UPDATE_OUTER macro,\n",
     "//          which updates a single outer boundary face \n",
@@ -1148,8 +1150,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote to file \"CurviBoundaryConditions_opt/boundary_conditions/xxCart.h\"\n",
-      "Wrote to file \"CurviBoundaryConditions_opt/boundary_conditions/Cart_to_xx.h\"\n"
+      "Wrote to file \"CurviBoundaryConditions_opt_Ccodes/boundary_conditions/xxCart.h\"\n",
+      "Wrote to file \"CurviBoundaryConditions_opt_Ccodes/boundary_conditions/Cart_to_xx.h\"\n"
      ]
     }
    ],
@@ -1160,10 +1162,10 @@
     "\n",
     "# Arbitrary-coordinate NRPy+ file output, Part 1: output the conversion from (x0,x1,x2) to Cartesian (x,y,z)\n",
     "outputC([rfm.xxCart[0],rfm.xxCart[1],rfm.xxCart[2]],[\"xCart[0]\",\"xCart[1]\",\"xCart[2]\"],\n",
-    "        \"CurviBoundaryConditions_opt/boundary_conditions/xxCart.h\")\n",
+    "        outdir+\"boundary_conditions/xxCart.h\")\n",
     "\n",
     "# Arbitrary-coordinate NRPy+ file output, Part 2: output the coordinate bounds xxmin[] and xxmax[]:\n",
-    "with open(\"CurviBoundaryConditions_opt/boundary_conditions/xxminmax.h\", \"w\") as file:\n",
+    "with open(outdir+\"boundary_conditions/xxminmax.h\", \"w\") as file:\n",
     "    file.write(\"const REAL xxmin[3] = {\"+str(rfm.xxmin[0])+\",\"+str(rfm.xxmin[1])+\",\"+str(rfm.xxmin[2])+\"};\\n\")\n",
     "    file.write(\"const REAL xxmax[3] = {\"+str(rfm.xxmax[0])+\",\"+str(rfm.xxmax[1])+\",\"+str(rfm.xxmax[2])+\"};\\n\")\n",
     "\n",
@@ -1176,10 +1178,10 @@
     "    sys.exit(1)\n",
     "outputC([rfm.Cart_to_xx[0],rfm.Cart_to_xx[1],rfm.Cart_to_xx[2]],\n",
     "        [\"Cart_to_xx0_inbounds\",\"Cart_to_xx1_inbounds\",\"Cart_to_xx2_inbounds\"],\n",
-    "        \"CurviBoundaryConditions_opt/boundary_conditions/Cart_to_xx.h\")\n",
+    "        outdir+\"boundary_conditions/Cart_to_xx.h\")\n",
     "\n",
     "# Generates declare_Cparameters_struct.h, set_Cparameters_default.h, and set_Cparameters[-SIMD].h\n",
-    "par.generate_Cparameters_Ccodes(\"./CurviBoundaryConditions_opt/\")"
+    "par.generate_Cparameters_Ccodes(outdir)"
    ]
   },
   {
@@ -1208,7 +1210,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote to file \"CurviBoundaryConditions_opt/boundary_conditions//parity_conditions_symbolic_dot_products.h\"\n",
+      "Wrote to file \"CurviBoundaryConditions_opt_Ccodes/boundary_conditions//parity_conditions_symbolic_dot_products.h\"\n",
       "Auxiliary gridfunction \"rankoneU0\" has parity type 1.\n",
       "Auxiliary gridfunction \"rankoneU1\" has parity type 2.\n",
       "Auxiliary gridfunction \"rankoneU2\" has parity type 3.\n",
@@ -1235,9 +1237,9 @@
     "# Step 8.b.2. Output gridfunction #define aliases to file:\n",
     "\n",
     "# import parity_conditions_symbolic_dot_products as parity\n",
-    "parity_conditions_symbolic_dot_products(outdir=\"CurviBoundaryConditions_opt/boundary_conditions/\")\n",
+    "parity_conditions_symbolic_dot_products(outdir+\"boundary_conditions/\")\n",
     "# import set_gridfunction_defines_with_parity_types as gfdefineparity\n",
-    "set_gridfunction_defines_with_parity_types(outdir=\"CurviBoundaryConditions_opt/\",verbose=True)"
+    "set_gridfunction_defines_with_parity_types(outdir+\"boundary_conditions/\",verbose=True)"
    ]
   },
   {
@@ -1275,12 +1277,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting CurviBoundaryConditions_opt/CurviBC_Discrete_Test.h\n"
+      "Overwriting CurviBoundaryConditions_opt_Ccodes//CurviBC_Discrete_Test.h\n"
      ]
     }
    ],
    "source": [
-    "%%writefile CurviBoundaryConditions_opt/CurviBC_Discrete_Test.h\n",
+    "%%writefile $outdir/CurviBC_Discrete_Test.h\n",
     "\n",
     "void Discrete_initial_data(paramstruct *params,REAL *in_gfs) {\n",
     "#include \"set_Cparameters.h\"\n",
@@ -1308,7 +1310,7 @@
    "outputs": [],
    "source": [
     "# Part P0: Set the number of ghost cells, from NRPy+'s FD_CENTDERIVS_ORDER\n",
-    "with open(\"CurviBoundaryConditions_opt/NGHOSTS.h\", \"w\") as file:\n",
+    "with open(outdir+\"NGHOSTS.h\", \"w\") as file:\n",
     "    file.write(\"// Part P0: Set the number of ghost zones, from NRPy+'s FD_CENTDERIVS_ORDER\\n\")\n",
     "    # Upwinding in BSSN requires that NGHOSTS = FD_CENTDERIVS_ORDER/2 + 1 <- Notice the +1.\n",
     "    file.write(\"#define NGHOSTS \"+str(int(par.parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\")/2)+1)+\"\\n\")"
@@ -1323,12 +1325,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting CurviBoundaryConditions_opt/CurviBC_Playground.c\n"
+      "Overwriting CurviBoundaryConditions_opt_Ccodes//CurviBC_Playground.c\n"
      ]
     }
    ],
    "source": [
-    "%%writefile CurviBoundaryConditions_opt/CurviBC_Playground.c\n",
+    "%%writefile $outdir/CurviBC_Playground.c\n",
     "\n",
     "// Step P0: Define REAL and NGHOSTS; and declare CFL_FACTOR. This header is generated in NRPy+.\n",
     "#include \"NGHOSTS.h\"\n",
@@ -1362,7 +1364,7 @@
     "  for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++)\n",
     "\n",
     "// Step P3: Set #define's for all gridfunctions registered within NRPy+. C code generated above\n",
-    "#include \"gridfunction_defines.h\"\n",
+    "#include \"boundary_conditions/gridfunction_defines.h\"\n",
     "\n",
     "inline void xxCart(const paramstruct *restrict params, REAL *restrict xx[3],\n",
     "                   const int i0,const int i1,const int i2, REAL xCart[3]) {\n",
@@ -1524,19 +1526,19 @@
      "output_type": "stream",
      "text": [
       "Compiling executable...\n",
-      "Executing `gcc -O2 -g -fopenmp CurviBoundaryConditions_opt/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "Finished executing in 0.625975847244 seconds.\n",
+      "Executing `gcc -O2 -g -fopenmp CurviBoundaryConditions_opt_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
+      "Finished executing in 0.623391866684 seconds.\n",
       "Finished compilation.\n",
       "Executing `taskset -c 0,1,2,3,4,5 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "Finished executing in 0.22190284729 seconds.\n",
+      "Finished executing in 0.218470096588 seconds.\n",
       "Finished this code cell.\n"
      ]
     }
    ],
    "source": [
     "import cmdline_helper as cmd\n",
-    "cmd.C_compile(\"CurviBoundaryConditions_opt/CurviBC_Playground.c\", \"CurviBC_Playground\", compile_mode=\"safe\")\n",
-    "cmd.Execute(\"CurviBC_Playground\", \"4 4 4 Discrete\", \"CurviBoundaryConditions_opt/out4x4x4-Spherical-NGHOSTS4oFD.txt\")\n",
+    "cmd.C_compile(outdir+\"CurviBC_Playground.c\", \"CurviBC_Playground\", compile_mode=\"safe\")\n",
+    "cmd.Execute(\"CurviBC_Playground\", \"4 4 4 Discrete\", outdir+\"out4x4x4-Spherical-NGHOSTS4oFD.txt\")\n",
     "print(\"Finished this code cell.\")"
    ]
   },
@@ -1557,7 +1559,7 @@
     "import sys\n",
     "\n",
     "import filecmp\n",
-    "if filecmp.cmp('CurviBoundaryConditions_opt/out4x4x4-Spherical-NGHOSTS4oFD.txt',\n",
+    "if filecmp.cmp(outdir+\"out4x4x4-Spherical-NGHOSTS4oFD.txt\",\n",
     "               'CurviBoundaryConditions_opt/SENRout4x4x4-Spherical_NGHOSTS4oFD.txt') == False:\n",
     "    print(\"ERROR: Spherical boundary conditions do not agree!\")\n",
     "    sys.exit(1)\n",
@@ -1574,17 +1576,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote to file \"CurviBoundaryConditions_opt/boundary_conditions/parity_conditions_symbolic_dot_products.h\"\n",
-      "Wrote to file \"CurviBoundaryConditions_opt/boundary_conditions/xxCart.h\"\n",
-      "Wrote to file \"CurviBoundaryConditions_opt/boundary_conditions/xxminmax.h\"\n",
-      "Wrote to file \"CurviBoundaryConditions_opt/boundary_conditions/Cart_to_xx.h\"\n",
+      "Wrote to file \"CurviBoundaryConditions_opt_Ccodes/boundary_conditions/parity_conditions_symbolic_dot_products.h\"\n",
+      "Wrote to file \"CurviBoundaryConditions_opt_Ccodes/boundary_conditions/xxCart.h\"\n",
+      "Wrote to file \"CurviBoundaryConditions_opt_Ccodes/boundary_conditions/xxminmax.h\"\n",
+      "Wrote to file \"CurviBoundaryConditions_opt_Ccodes/boundary_conditions/Cart_to_xx.h\"\n",
       "Running discrete CurviBC_Playground test on Spherical data, using NRPy+ CurviBoundaryConditions_opt.CurviBoundaryConditions_opt module.\n",
       "Compiling executable...\n",
-      "Executing `gcc -Ofast -fopenmp -march=native CurviBoundaryConditions_opt/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "Finished executing in 1.02467489243 seconds.\n",
+      "Executing `gcc -Ofast -fopenmp -march=native CurviBoundaryConditions_opt_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
+      "Finished executing in 1.02574801445 seconds.\n",
       "Finished compilation.\n",
       "Executing `taskset -c 0,1,2,3,4,5 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "Finished executing in 0.217896938324 seconds.\n",
+      "Finished executing in 0.218134880066 seconds.\n",
       "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f0_of_xx0\n",
       "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f1_of_xx1\n",
       "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f0_of_xx0__D0\n",
@@ -1595,17 +1597,17 @@
       "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f1_of_xx1__DDD111\n",
       "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
       "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_SQRT1_2\n",
-      "Wrote to file \"CurviBoundaryConditions_opt/boundary_conditions/parity_conditions_symbolic_dot_products.h\"\n",
-      "Wrote to file \"CurviBoundaryConditions_opt/boundary_conditions/xxCart.h\"\n",
-      "Wrote to file \"CurviBoundaryConditions_opt/boundary_conditions/xxminmax.h\"\n",
-      "Wrote to file \"CurviBoundaryConditions_opt/boundary_conditions/Cart_to_xx.h\"\n",
+      "Wrote to file \"CurviBoundaryConditions_opt_Ccodes/boundary_conditions/parity_conditions_symbolic_dot_products.h\"\n",
+      "Wrote to file \"CurviBoundaryConditions_opt_Ccodes/boundary_conditions/xxCart.h\"\n",
+      "Wrote to file \"CurviBoundaryConditions_opt_Ccodes/boundary_conditions/xxminmax.h\"\n",
+      "Wrote to file \"CurviBoundaryConditions_opt_Ccodes/boundary_conditions/Cart_to_xx.h\"\n",
       "Running discrete CurviBC_Playground test on Cylindrical data, using NRPy+ CurviBoundaryConditions_opt.CurviBoundaryConditions_opt module.\n",
       "Compiling executable...\n",
-      "Executing `gcc -Ofast -fopenmp -march=native CurviBoundaryConditions_opt/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "Finished executing in 1.02821803093 seconds.\n",
+      "Executing `gcc -Ofast -fopenmp -march=native CurviBoundaryConditions_opt_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
+      "Finished executing in 1.02532815933 seconds.\n",
       "Finished compilation.\n",
       "Executing `taskset -c 0,1,2,3,4,5 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "Finished executing in 0.220181941986 seconds.\n",
+      "Finished executing in 0.216639041901 seconds.\n",
       "Finished this code cell.\n",
       "\n",
       "\n",
@@ -1617,33 +1619,33 @@
    "source": [
     "import filecmp\n",
     "import CurviBoundaryConditions_opt.CurviBoundaryConditions_opt as cbcs\n",
-    "cbcs.Set_up_CurviBoundaryConditions(outdir=\"CurviBoundaryConditions_opt/boundary_conditions/\",verbose=False)\n",
+    "cbcs.Set_up_CurviBoundaryConditions(outdir+\"boundary_conditions/\",verbose=False)\n",
     "\n",
     "print(\"Running discrete CurviBC_Playground test on Spherical data, using NRPy+ CurviBoundaryConditions_opt.CurviBoundaryConditions_opt module.\")\n",
-    "cmd.C_compile(\"CurviBoundaryConditions_opt/CurviBC_Playground.c\", \"CurviBC_Playground\")\n",
+    "cmd.C_compile(outdir+\"CurviBC_Playground.c\", \"CurviBC_Playground\")\n",
     "cmd.Execute(\"CurviBC_Playground\", \"4 4 4 Discrete\", \n",
-    "            \"CurviBoundaryConditions_opt/CBCmodule-out4x4x4-Spherical-NGHOSTS4oFD.txt\")\n",
+    "            outdir+\"CBCmodule-out4x4x4-Spherical-NGHOSTS4oFD.txt\")\n",
     "\n",
     "# Then we set the coordinate system for the numerical grid\n",
     "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Cylindrical\")\n",
     "rfm.reference_metric()\n",
-    "cbcs.Set_up_CurviBoundaryConditions(outdir=\"CurviBoundaryConditions_opt/boundary_conditions/\",verbose=False)\n",
-    "par.generate_Cparameters_Ccodes(\"./CurviBoundaryConditions_opt/\")\n",
+    "cbcs.Set_up_CurviBoundaryConditions(outdir+\"boundary_conditions/\",verbose=False)\n",
+    "par.generate_Cparameters_Ccodes(outdir)\n",
     "print(\"Running discrete CurviBC_Playground test on Cylindrical data, using NRPy+ CurviBoundaryConditions_opt.CurviBoundaryConditions_opt module.\")\n",
-    "cmd.C_compile(\"CurviBoundaryConditions_opt/CurviBC_Playground.c\", \"CurviBC_Playground\")\n",
-    "cmd.Execute(\"CurviBC_Playground\", \"4 4 4 Discrete\", \"CurviBoundaryConditions_opt/CBCmodule-out4x4x4-Cylindrical-NGHOSTS4oFD.txt\")\n",
+    "cmd.C_compile(outdir+\"CurviBC_Playground.c\", \"CurviBC_Playground\")\n",
+    "cmd.Execute(\"CurviBC_Playground\", \"4 4 4 Discrete\", outdir+\"CBCmodule-out4x4x4-Cylindrical-NGHOSTS4oFD.txt\")\n",
     "print(\"Finished this code cell.\")\n",
     "\n",
     "print(\"\\n\")\n",
     "\n",
-    "if filecmp.cmp('CurviBoundaryConditions_opt/CBCmodule-out4x4x4-Spherical-NGHOSTS4oFD.txt',\n",
+    "if filecmp.cmp(outdir+\"CBCmodule-out4x4x4-Spherical-NGHOSTS4oFD.txt\",\n",
     "               'CurviBoundaryConditions_opt/SENRout4x4x4-Spherical_NGHOSTS4oFD.txt') == False:\n",
     "    print(\"ERROR: Spherical boundary conditions do not agree!\")\n",
     "    sys.exit(1)\n",
     "else:\n",
     "    print(\"Spherical boundary condition comparison test between CBC & trusted original SENR code: PASSED\")\n",
     "\n",
-    "if filecmp.cmp('CurviBoundaryConditions_opt/CBCmodule-out4x4x4-Cylindrical-NGHOSTS4oFD.txt',\n",
+    "if filecmp.cmp(outdir+\"CBCmodule-out4x4x4-Cylindrical-NGHOSTS4oFD.txt\",\n",
     "               'CurviBoundaryConditions_opt/SENRout4x4x4-Cylindrical_NGHOSTS4oFD.txt') == False:\n",
     "    print(\"ERROR: Cylindrical boundary conditions do not agree!\")\n",
     "    sys.exit(1)\n",
