Added Tables of Contents to all GiRaFFE_HO C code libraries.

--- a/Tutorial-GiRaFFE_HO_C_code_library-BCs.ipynb
+++ b/Tutorial-GiRaFFE_HO_C_code_library-BCs.ipynb
@@ -14,13 +14,43 @@
     "\n",
     "The functions and macros defined here fall into one of two categories. The first we will work with is the `FACE_UPDATE` family, which will act on a single face, looping over each point as defined by  the parameters `i0min`, `i0max`, `i1min`, `i1max`, `i2min`, and `i2max`. The parameters `FACEX0`, `FACEX1`, and `FACEX2` define which face on which we wish to act; that is, two of the `FACEX` parameters must be set to `NUL` (defined as 0) while the other is set either `MAXFACE` (defined as -1) or `MINFACE` (defined as +1). For instance, if we want to fill in a ghostzone on the +x face of our grid, we must call `FACE_UPDATE` with `FACEX0 = MAXFACE`, `FACEX1 = NUL`, and `FACEX2 = NUL`. \n",
     "\n",
-    "Care must be taken to set `i0min`, `i0max`, `i1min`, `i1max`, `i2min`, and `i2max` in such a way as to be consistent with `FACEX0`, `FACEX1`, and `FACEX2`; failure to do so can result in bad data and out-of-bounds errors."
+    "Care must be taken to set `i0min`, `i0max`, `i1min`, `i1max`, `i2min`, and `i2max` in such a way as to be consistent with `FACEX0`, `FACEX1`, and `FACEX2`; failure to do so can result in bad data and out-of-bounds errors.\n",
+    "\n",
+    "<a id='toc'></a>\n",
+    "\n",
+    "# Table of Contents\n",
+    "$$\\label{toc}$$\n",
+    "\n",
+    "This module is organized as follows\n",
+    "\n",
+    "1. [Step 1](#extrap): Extrapolation Boundary Conditions\n",
+    "    1. [Step 1.a](#linear): Linear Extrapolation\n",
+    "    1. [Step 1.b](#copy): Copy Boundary Conditions\n",
+    "    1. [Step 1.c](#outflow): Outflow Boundary Conditions\n",
+    "    1. [Step 1.d](#apply): Applying the Boundary Conditions\n",
+    "1. [Step 2](#exact): Exact Boundary Conditions\n",
+    "    1. [Step 2.a](#A_i_and_vi): Setting $A_i$ and $v^i$ exactly\n",
+    "    1. [Step 2.b](#apply_exact): Applying the exact Boundary Conditions to $A_i$ and $v^i$    \n",
+    "    1. [Step 2.c](#stilded): Setting $\\tilde{S}_i$ exactly \n",
+    "    1. [Step 2.d](#apply_stilded): Applying the exact Boundary Conditions to $\\tilde{S}_i$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='extrap'></a>\n",
+    "\n",
+    "## Extrapolation Boundary Conditions\n",
+    "\\[Back to [top](#toc)\\]\n",
+    "$$\\label{extrap}$$\n",
+    "\n",
+    "<a id='linear'></a>\n",
+    "\n",
+    "### Linear Extrapolation\n",
+    "\\[Back to [top](#toc)\\]\n",
+    "$$\\label{linear}$$\n",
+    "\n",
     "The first `FACE_UPDATE` macro will be basic linear extrapolation conditions. It will apply boundary conditions in the specified ghostzone for the gridfunction specified by `which_gf` in the array `gfs`. That array will be passed under that name into the functions that call `FACE_UPDATE`; by convention, `gfs` is the array of evolved gridfunctions. "
    ]
   },
@@ -59,6 +89,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='copy'></a>\n",
+    "\n",
+    "### Copy Boundary Conditions\n",
+    "\\[Back to [top](#toc)\\]\n",
+    "$$\\label{copy}$$\n",
+    "\n",
     "This macro, `FACE_UPDATE_COPY`, applies copy boundary conditions. Instead of a linear extrapolation of the data in the nearest two points in the direction of the grid interior, it simply copies the data from the nearest point in the direction of the grid interior.\n",
     "\n",
     "We also define `MAXFACE`, `NUL`, and `MINFACE` as constants. These should be unchanging and accessible to any function anywhere in the program. "
@@ -97,6 +133,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='outflow'></a>\n",
+    "\n",
+    "### Outflow Boundary Conditions\n",
+    "\\[Back to [top](#toc)\\]\n",
+    "$$\\label{outflow}$$\n",
+    "\n",
     "This macro, `FACE_UPDATE_OUTFLOW`, is poorly named at the moment; currently, it is a clone of the macro `FACE_UPDATE` that acts on the array `aux_gfs` instead of `gfs`. However, take note of the commented code below the macro - once further testing and fixes to the time evolution are completed, parts of that will be completed, those lines will be reimplemented to actually use outflow boundary conditions with linear extrapolation. For that algorithm, the macro will accept a `which_gf_0` parameter instead of `which_gf`, and operate on the gridfunctions `which_gf_0+0`, `which_gf_0+1`, and `which_gf_0+2` (that is, the macro will act on an entire 3-vector). This must be done since the different faces and components must be handled in slightly different ways. \n",
     "\n",
     "In outflow boundary conditions, if a quantity is directed inwards (e.g. if $v^x < 0$ in the +x ghostzone), it is set to zero. Otherwise, we apply the standard linear extrapolation boundary condition."
@@ -151,6 +193,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='apply'></a>\n",
+    "\n",
+    "### Applying the Boundary Conditions\n",
+    "\\[Back to [top](#toc)\\]\n",
+    "$$\\label{apply}$$\n",
+    "\n",
     "The second category of functions we use here is responsible for applying BCs in all the ghostzones by applying the `FACE_UPDATE` macro in the correct way for each ghostzone on each face. So, we loop over each evolved gridfunction (that is *not* a component of `StildeD`); for each gridfunction, we first define the parameters `imin` and `imax` to specify the area just outside the interior of the grid. We then call `FACE_UPDATE` on each face of the innermost ghostzone. As we go, we'll decrement each component of `imin` and increment each component of `imax`; thus, after we have done all six faces, `imin` and `imax` specify the next-innermost ghostzone. We proceed in this manner until we have covered each ghostzone. "
    ]
   },
@@ -282,6 +330,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='exact'></a>\n",
+    "\n",
+    "## Exact Boundary Conditions\n",
+    "\\[Back to [top](#toc)\\]\n",
+    "$$\\label{exact}$$\n",
+    "\n",
+    "<a id='A_i_and_vi'></a>\n",
+    "\n",
+    "### Setting $A_i$ and $v^i$ exactly\n",
+    "\\[Back to [top](#toc)\\]\n",
+    "$$\\label{A_i_and_vi}$$\n",
+    "\n",
     "The next algorithms we will cover are exact boundary conditions. These are a testing tool that we can use to determine if our boundary conditions are causing a problem - since we know the exact solution to the Alfv&eacute;n wave at any future time, we can simply set the boundary conditions to this value. \n",
     "\n",
     "**IMPORTANT:** Since we have gauge freedom in specifying the vector potential $A_i$, this vector can drift in a way that has no physical effect on the system, but will cause massive inconsistencies between the ghostzones and grid interior.\n",
@@ -331,7 +391,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This function is, once again, almost identical to the first portino of `apply_bcs`. The primary difference is the version of `FACE_UPDATE` it calls; furthermore, since `FACE_UPDATE_EXACT` operates on several gridfunctions simultaneously, it is not necessary to loop over gridfunctions. "
+    "<a id='apply_exact'></a>\n",
+    "\n",
+    "### Applying the exact Boundary Conditions to $A_i$ and $v^i$\n",
+    "\\[Back to [top](#toc)\\]\n",
+    "$$\\label{apply_exact}$$\n",
+    "\n",
+    "This function is, once again, almost identical to the first portion of `apply_bcs`. The primary difference is the version of `FACE_UPDATE` it calls; furthermore, since `FACE_UPDATE_EXACT` operates on several gridfunctions simultaneously, it is not necessary to loop over gridfunctions. "
    ]
   },
   {
@@ -380,6 +446,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='stilded'></a>\n",
+    "\n",
+    "### Setting $\\tilde{S}_i$ exactly\n",
+    "\\[Back to [top](#toc)\\]\n",
+    "$$\\label{stilded}$$\n",
+    "\n",
     "This function covers the gap in the above algorithm to apply exact boundary conditions: `StildeD`. There are two different options given here: one includes the header file that is used in the initial data setup to calculate `StildeD` from the 3-velocity and magnetic field the other assumes that this step was already done when `out_gfs_exact` was filled at the current timestep (the `*_exact` arrays are filled at each timestep with the exact solution to allow for convergence testing) and copies the data from there. "
    ]
   },
@@ -418,6 +490,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='apply_stilded'></a>\n",
+    "\n",
+    "### Applying the exact Boundary Conditions to $\\tilde{S}_i$\n",
+    "\\[Back to [top](#toc)\\]\n",
+    "$$\\label{apply_stilded}$$\n",
+    "\n",
     "This function is nearly identical to `apply_bcs_EXACT_StildeD`, but calls `FACE_UPDATE_EXACT_StildeD` instead of `FACE_UPDATE_EXACT`."
    ]
   },
